@@ -14,6 +14,10 @@ S <mave> comment goes here
     'B' : means a BugFix
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
+    ==> 177 - 20/04/2007 - 0.8.0 release <==
+
+C <mave> Cluster::size() renamed into numNeurons()
+
     ==> 176 - 20/04/2007 <==
 
 B <mave> bugfix in assignment operator of RealVec and VectorData
